# CKaleidoscope

./: .gitignore  CMakeLists.txt  Makefile  README.md  anyex.hpp  ast.hpp  binary.cpp  binary.h  errdef.hpp  global.hpp  input.in  input2.in  input3.in  input4.in  input5.in  ioagent.hpp  jit.hpp  lexer.hpp  main.cpp  optimizer.hpp  parser.hpp  stdlib.cpp  stdlib.def
.github/workflows/: cmake.yml  ubuntu.yml  windows.yml
test/: sample.cpp
test/1/: input.in
test/2/: input.in
test/3/: input.in
test/4/: input.in
test/5/: input.in
test/callclib/: input.in
test/clang_ex/: fft.cpp  fft.ll  myfft.ll
test/facmod/: input.in
test/fastrd/: input.in
test/fft/: data.ans  data.in  data.out  input.in  structure.jsonc
test/fileio/: input.in
test/fwt/: data.ans  data.in
test/gcd/: input.in
test/memfib/: input.in
test/more/: input.in
test/new_comma_test/: input.in
test/new_decl_test/: error.in  input.in
test/right_asso/: input.in
test/segtree/: data.ans  data.in  input.in
test/simpson/: input.in
